# sim2real

./: .gitignore  README.md  merge_banana_datasets.py
01_setup/: add_robot.py  empty_scene.py  run_articulation.py  run_deformable_object.py  spawn_rigid_cube.py
02_Sim2Real/: interview_prep_kelly_guo.md  runCommand.md  slides.md
02_Sim2Real/marker_pick_place/: design_setup.py  marker_pick_place.py  sim_real_groot_plan.md
02_Sim2Real/marker_pick_place/RL/: __init__.py  banana_pick_env_cfg.py  train.py
02_Sim2Real/marker_pick_place/marker_pick_place/: camera.md
03_VR_XR/: .gitignore  README.md  build_quest2ros2_msgs.sh  cloudxr_quest2.env  custom_arm_stack_env_cfg.py  custom_arm_tasks.py  humanoid.py  isaac_sim_imitation_learrning.md  quest2_so100_ik_teleop.py  run_cloudxr.sh  run_custom_arm_stack_handtracking.sh  run_custom_arm_stack_keyboard.sh  run_franka_stack_handtracking.sh  run_franka_stack_handtracking_debug.sh  run_g1_fixed_base_handtracking.sh  run_g1_inspire_handtracking.sh  run_g1_locomanip_handtracking.sh  run_quest2_so100_ik_teleop.sh  teleop_custom_arm.py  teleop_debug_handtracking.py  tut.md
03_VR_XR/quest2ros2_msgs/: CMakeLists.txt  package.xml
03_VR_XR/quest2ros2_msgs/msg/: OVR2ROSHapticFeedback.msg  OVR2ROSInputs.msg
Knowledge/: sim2real.md
Projects/: marker_pick_place_isaac_lab_task.md  plan.md  sim2real.md  spawn_so100.md
telegrip/: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
telegrip/telegrip/: __init__.py  config.py  control_loop.py  main.py
telegrip/web-ui/: index.html  interface.js  vr_app.js
(+74 files in other folders)
