<?xml version="1.0"?>
<package format="3">
  <name>quest2ros2_msgs</name>
  <version>0.0.1</version>
  <description>ROS 2 message definitions compatible with Quest2ROS controller inputs.</description>
  <maintainer email="hassaan@example.com">hassaan</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
